@@ -1,6 +1,11 @@
 PostGIS 3.7.0dev
 xxxx/xx/xx
 
+* New Features *
+
+ - #5993, [topology] Add max_edges parameter to TopoGeo_AddLinestring
+          (Sandro Santilli)
+
 PostGIS 3.6.0
 2025/09/01
 
